--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lineup</title>
     <link rel="stylesheet" href="./node_modules/bulma/css/bulma.min.css">
     <style>
         #container {
-            background-image: url("img/Field.jpg");
+            background-image: url("./img/Field.jpg");
             background-repeat: no-repeat;
             width: 1200px;
             height: 627px;
