Build app min js and css style folder

--- a/index.html
+++ b/index.html
@@ -7,23 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lineup</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <style>
-        #container {
-            background-image: url("./img/Field.jpg");
-            background-repeat: no-repeat;
-            width: 1200px;
-            height: 627px;
-        }
-
-        div.field>div,
-        button {
-            margin: 5px 5px;
-        }
-
-        #player {
-            padding-top: 15px;
-        }
-    </style>
+    <link rel="stylesheet" href="./style/main.css">
 </head>
 
 <body>
@@ -59,7 +43,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <script src="https://cdn.rawgit.com/konvajs/konva/2.3.0/konva.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="app.js"></script>
+    <script src="app.min.js"></script>
     <script>
         function cnvs_getCoordinates(e) {
             x = e.clientX;
