--- a/index.html
+++ b/index.html
@@ -8,12 +8,43 @@
     <title>Lineup</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <link rel="stylesheet" href="./style/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Notable" rel="stylesheet">
 </head>
 
 <body>
     <div class="columns">
         <div class="" id="container" onmousemove="cnvs_getCoordinates(event)" onmouseout="cnvs_clearCoordinates()"></div>
         <div class="" id="player">
+            <div class="field">
+                <div class="control">
+                    <label class="label">Logo: </label>
+                    <label class="radio">
+                        <input type="radio" name="logo" value="fifastep5" checked>
+                        Fifastep5
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="logo" value="gu">
+                        Gu
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="logo" value="newstar">
+                        Newstar
+                    </label>
+                </div>
+            </div>
+            <div class="field">
+                <div class="control">
+                    <label class="label">Home / Away: </label>
+                    <label class="radio">
+                        <input type="radio" name="home_away" value="Home" checked>
+                        Home
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="home_away" value="Away">
+                        Away
+                    </label>
+                </div>
+            </div>
             <div class="field">
                 <div class="select">
                     <select id="league">
@@ -43,7 +74,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <script src="https://cdn.rawgit.com/konvajs/konva/2.3.0/konva.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="app.min.js"></script>
+    <script src="app.js"></script>
     <script>
         function cnvs_getCoordinates(e) {
             x = e.clientX;
