change logo module

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="control">
                     <label class="label">Logo: </label>
                     <label class="radio">
-                        <input type="radio" name="logo" value="fifastep5" checked>
+                        <input type="radio" name="logo" value="fifastep5">
                         Fifastep5
                     </label>
                     <label class="radio">
