dynamic web logo

--- a/index.html
+++ b/index.html
@@ -16,23 +16,6 @@
         <div class="" id="player">
             <div class="field">
                 <div class="control">
-                    <label class="label">Logo: </label>
-                    <label class="radio">
-                        <input type="radio" name="logo" value="fifastep5">
-                        Fifastep5
-                    </label>
-                    <label class="radio">
-                        <input type="radio" name="logo" value="gu">
-                        Gu
-                    </label>
-                    <label class="radio">
-                        <input type="radio" name="logo" value="newstar">
-                        Newstar
-                    </label>
-                </div>
-            </div>
-            <div class="field">
-                <div class="control">
                     <label class="label">Home / Away: </label>
                     <label class="radio">
                         <input type="radio" name="home_away" value="Home" checked>
@@ -65,7 +48,27 @@
                     </select>
                 </div>
             </div>
-            <button id="create" class="button is-success">Create</button>
+            <div class="field">
+                <button id="create" class="button is-success">Create</button>
+            </div>
+            <hr>
+            <div id="logoDiv" class="field">
+                <div class="control">
+                    <label class="label">Logo: [Create Formation First]</label>
+                    <label class="radio">
+                        <input type="radio" name="logo" value="fifastep5">
+                        Fifastep5
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="logo" value="gu">
+                        Gu
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="logo" value="newstar">
+                        Newstar
+                    </label>
+                </div>
+            </div>
         </div>
     </div>
     </div>
