Done for dynamic web logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
     <div class="columns">
-        <div class="" id="container" onmousemove="cnvs_getCoordinates(event)" onmouseout="cnvs_clearCoordinates()"></div>
+        <div id="container" onmousemove="cnvs_getCoordinates(event)" onmouseout="cnvs_clearCoordinates()">
+
+        </div>
         <div class="" id="player">
             <div class="field">
                 <div class="control">
